examples/test/testpolicy19197.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19197
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key32: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value49
          key43: value18
          key21: value42
      podSelector:
        matchLabels:
          key29: value1
          key13: value10
          key21: value4
